--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>ARK DEV – Consultora Tecnológica</title>
+  <meta name="description" content="ARK DEV es una consultora tecnológica especializada en desarrollo de software, ciberseguridad y sistemas empresariales.">
+  <meta name="robots" content="index, follow">
+</head>
+<body>
+  <h1>ARK DEV</h1>
+  <p>Consultora tecnológica especializada en desarrollo de software y ciberseguridad.</p>
+
+  <p>
+    Sitio web oficial:
+    <a href="https://www.ark-dev.org/" target="_blank" rel="noopener">
+      https://www.ark-dev.org/
+    </a>
+  </p>
+</body>
+</html>
